# DanMuScreen

./: .gitignore  Readme.md  danmu.py  dm.ass  pyproject.toml  render.py  requirements.txt
.github/workflows/: build.yml
src/: danmu.py  gui.py  main.py  parser.py  renderer.py  settings.py
tools/: bilibili.py  merge_xml.py  xml2ass.py
