[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-danmu"
version = "1.0.1"
authors = [
  { name="Richard Hou", email="xhou@xhou.me" },
]
description = "An offline Danmu player"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ass>=0.5.3",
    "PySide6>=6.5.1",
]

[project.urls]
"Homepage" = "https://github.com/imhlq/Danmu-project"
"Bug Tracker" = "https://github.com/imhlq/Danmu-project/issues"